# fm-code-formatter

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
examples/: 01-claris-while-let.fmcalc  02-let-nested-messy.fmcalc  03-case-long.fmcalc  04-jsonsetelement.fmcalc  05-real-world-names.fmcalc  06-lint-violations.fmcalc  README.md
fmstyle/: __init__.py  cli.py  config.py  lexer.py  parser.py  presets.py  printer.py  rules.py
fmstyle/skill/: SKILL.md  style-pack.md
fmstyle/web/: _headers  index.html
tests/: gen_parity_fixtures.py  parity_fixtures.json  test_fmstyle.py  test_parity.mjs
tools/: corpus_audit.py
